--- a/example.yml
+++ b/example.yml
@@ -25,7 +25,7 @@ development:
         pass: guest
         host: localhost
         port: 5672
-    mailFrom: testmail@adeven.com
+    mailFrom: testmail@adjust.com
     mailPasswd: SuperSecret13
     mailServer: smtp.example.com
 
@@ -45,7 +45,7 @@ testing:
         pass: guest
         host: localhost
         port: 5674
-    mailFrom: testmail@adeven.com
+    mailFrom: testmail@adjust.com
     mailPasswd: SuperSecret13
     mailServer: smtp.example.com
 
@@ -65,7 +65,7 @@ staging:
         pass: pass
         host: localhost
         port: 5672
-    mailFrom: testmail@adeven.com
+    mailFrom: testmail@adjust.com
     mailPasswd: SuperSecret13
     mailServer: smtp.example.com
 
@@ -85,7 +85,7 @@ production:
         pass: pass
         host: localhost
         port: 5672
-    mailFrom: testmail@adeven.com
+    mailFrom: testmail@adjust.com
     mailPasswd: SuperSecret13
     mailServer: smtp.example.com
 
