--- a/test_config.yml
+++ b/test_config.yml
@@ -41,6 +41,10 @@ redis:
         host: ruo
         port: 114
         db: 81
+    redis_log_writer:
+        host: /tmp/redis.sock
+        db: 1
+        pool_size: 100
 
 graphite:
     graphite:
